Change mail address label dynamically

--- a/locales/en.json
+++ b/locales/en.json
@@ -16,7 +16,8 @@
 	"invitation-label": "Invitation",
 	"postal": "Postal",
 	"email": "Email",
-	"mailing-address-label": "Mailing Address",
+	"postal-address-label": "Postal Address",
+	"email-address-label": "Email Address",
 	"phone-number-label": "Phone Number",
 	"vegan-label": "Vegan?",
 	"yes": "Yes",
