--- a/locales/zh.json
+++ b/locales/zh.json
@@ -16,7 +16,8 @@
 	"invitation-label": "喜帖",
 	"postal": "紙本",
 	"email": "Email",
-	"mailing-address-label": "寄送地址",
+	"postal-address-label": "寄送地址",
+	"email-address-label": "Email 地址",
 	"phone-number-label": "電話",
 	"vegan-label": "素食",
 	"yes": "是",
