Prevent submitting incomplete answers

--- a/locales/en.json
+++ b/locales/en.json
@@ -24,6 +24,7 @@
 	"no": "No",
 	"say-something-label": "Say Something",
 	"done": "Done!",
+	"blank-warn": "You have to fill all the required fields!",
 	"thanks": "Thanks!",
 	"looking-forward": "Looking forward to your coming."
 }
