--- a/locales/zh.json
+++ b/locales/zh.json
@@ -24,6 +24,7 @@
 	"no": "否",
 	"say-something-label": "留個言吧",
 	"done": "送出!",
+	"blank-warn": "請把必填欄位填完喔!",
 	"thanks": "謝謝你!",
 	"looking-forward": "期待當天見到你"
 }
