--- a/locales/en.json
+++ b/locales/en.json
@@ -26,5 +26,11 @@
 	"done": "Done!",
 	"blank-warn": "You have to fill all the required fields!",
 	"thanks": "Thanks!",
-	"looking-forward": "Looking forward to your coming."
+	"looking-forward": "Looking forward to your coming.",
+	"pig-message-1": "Not me!",
+	"pig-message-2": "You found Agogo!",
+	"pig-message-3": "Not me!",
+	"pig-message-4": "Not me!",
+	"pig-message-gift": "Here is a gift!",
+	"story": "Story Episode 1"
 }
