--- a/locales/zh.json
+++ b/locales/zh.json
@@ -26,5 +26,11 @@
 	"done": "送出!",
 	"blank-warn": "請把必填欄位填完喔!",
 	"thanks": "謝謝你!",
-	"looking-forward": "期待當天見到你"
+	"looking-forward": "期待當天見到你",
+	"pig-message-1": "不是我!",
+	"pig-message-2": "你找到阿果果了!",
+	"pig-message-3": "不是我!",
+	"pig-message-4": "不是我!",
+	"pig-message-gift": "給你小禮物!",
+	"story": "故事第一篇"
 }
