Fix some wording

--- a/locales/en.json
+++ b/locales/en.json
@@ -32,5 +32,6 @@
 	"pig-message-3": "Not me!",
 	"pig-message-4": "Not me!",
 	"pig-message-gift": "Here is a gift!",
-	"story": "Story Episode 1"
+	"story": "Story Episode 1",
+	"fill-out-before": "Please fill out before August 9!"
 }
